add tag timer in HTML and style for this tag timer. Add script JS

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body {
 }
 
 
-/* ---ШАПКА------------------------------------------------------------------------- */
+/* ---header------------------------------------------------------------------------- */
 
 .header {
     position: absolute;
@@ -239,7 +239,7 @@ body {
 
 .footer-block__body {
     /* margin: 15px auto; */
-    padding: 0 15px;
+    gap: 15px;
     display: flex;
     /* flex-wrap: wrap; */
 }
@@ -269,6 +269,28 @@ body {
 
 .main-block__container {}
 
+.main-block__timer {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+.timer__block {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 135px;
+    height: 75px;
+    border: 1px solid black;
+    font-size: larger;
+    
+}
+.timer__block span {
+    font-size: larger;
+    margin-right: 5px;
+    
+}
 .main-block__body {
     padding: 184px 0px 191px 0px;
     position: relative;
@@ -398,10 +420,13 @@ body {
 .services__container {}
 
 .services__body {
+    display: flex;
+    gap: 15px;
     justify-content: center;
+
 }
 
-@media (min-width: 670px) {
+@media (max-width: 670px) {
     .services__body {
         display: flex;
         flex-wrap: wrap;
@@ -413,7 +438,7 @@ body {
     flex: 0 1 33.333%;
 }
 
-@media (min-width: 670px) {
+@media (max-width: 670px) {
     .services__column {
         padding: 0px 15px;
     }
@@ -437,6 +462,15 @@ body {
     background-color: #fff;
     padding: 35px;
     justify-items: center;
+    -webkit-box-shadow: 5px -11px 15px -5px #000000; 
+    
+    position: relative;
+    transition: color .1s ease-in-out;
+    
+}
+
+.services__item:hover { 
+   
 }
 
 @media (max-width: 479px) {
@@ -446,10 +480,10 @@ body {
 }
 
 .item-service {
-width= 100%; 
+width: 100%; 
 }
 .item-service img {
-width=100%;
+width:100%;
 }
 .item-service_green {
     background-color: #0d5c63;
@@ -578,6 +612,9 @@ width=100%;
     .practice {
         padding: 40px 0px 80px 0px;
     }
+    .footer-block__body {
+        flex-wrap: wrap;
+    }
 }
 
 @media (max-width: 767px) {
@@ -664,4 +701,22 @@ width=100%;
 .item-practice__image {
     display: block;
     padding: 0px 0px 60% 0px;
+}
+.telegram:hover {
+    fill: aqua;
+}
+.youTube:hover {
+    fill: rgb(238, 1, 1);
+}
+.facebook:hover {
+    fiil: blue;
+}
+.vk:hover {
+    fill: rgb(28, 140, 206);
+}
+.twitter:hover {
+    fill:#00ccff;
+}
+.inst:hover {
+    fill:rgba(219, 19, 226, 0.61);
 }
